# openprinttag-pn5180-rpi

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: build-release.yml  lint.yml
ino/mqtt-display/: Inter_Bold_15.h  Inter_Light_10.h  mqtt-display.ino
ino/mqtt-display.ino/: mqtt-display.ino.ino
openprinttag-web-viewer/: README.md  package-lock.json  package.json
openprinttag-web-viewer/public/: index.html
openprinttag-web-viewer/src/: App.tsx  index.tsx  types.ts  useApp.ts
openprinttag-web-viewer/src/components/DivContainer/: DivContainer.tsx
openprinttag-web-viewer/src/components/HealthIndicator/: HealthIndicator.tsx
openprinttag-web-viewer/src/components/Pagination/: Pagination.tsx  usePagination.ts
openprinttag-web-viewer/src/components/TabsRow/: Tab.tsx  TabsRow.tsx  index.ts
openprinttag-web-viewer/src/context/: MqttMessageContext.ts
openprinttag-web-viewer/src/features/CurrentFilamentBadge/: CurrentFilamentBadge.tsx  useCurrentFilamentBadge.ts
openprinttag-web-viewer/src/features/HealthIndicatorBadge/: HealthIndicatorBadge.css  HealthIndicatorBadge.tsx  useHealthIndicatorBadge.ts
openprinttag-web-viewer/src/features/HistoryTable/: EventRow.tsx  HistoryTable.tsx  useHistoryTable.ts
openprinttag-web-viewer/src/features/Layout/: Layout.css  Layout.tsx  useLayout.ts
openprinttag-web-viewer/src/features/MainTabs/: MainTabs.tsx
openprinttag-web-viewer/src/features/Navigation/: Navigation.tsx
openprinttag-web-viewer/src/features/PN5180NotificationBadge/: PN5180NotificationBadge.css  PN5180NotificationBadge.tsx  usePN5180NotificationBadge.ts
openprinttag-web-viewer/src/features/PN5180StatusCard/: PN5180StatusCard.tsx  usePN5180Status.ts
openprinttag-web-viewer/src/features/PrinterFormCard/: PrinterFormCard.tsx  index.ts  usePrinterFormCard.ts
openprinttag-web-viewer/src/features/PrinterIndicatorBadge/: PrinterIndicatorBadge.tsx  usePrinterIndicatorBadge.ts
openprinttag-web-viewer/src/features/Printers/: Printers.tsx
openprinttag-web-viewer/src/features/PrintersTable/: PrintersTable.tsx  usePrintersTable.ts
openprinttag-web-viewer/src/features/TagCard/: TagCard.tsx  index.ts  useTagCard.ts
openprinttag-web-viewer/src/features/WriteTag/: WriteTag.tsx  (+2 more)
openprinttag-web-viewer/src/hooks/: useMqtt.ts  useMqttConnection.ts  useMqttMessages.ts  useStale.ts
python/: pyproject.toml
python/openprinttag-pn5180-rpi/: pyproject.toml
python/openprinttag-pn5180-rpi/src/openprinttag_rpi/: database.py  main_pn5180.py
python/openprinttag-pn5180-rpi/src/openprinttag_rpi/callbacks/: console.py  led_neopixel.py  mqtt_publisher.py  webapi_publisher.py
python/openprinttag-pn5180-rpi/src/openprinttag_rpi/common/: api.py
python/openprinttag-pn5180-rpi/src/openprinttag_rpi/integrations/mqtt/: filament_usage_subscriber.py  tag_write_queue.py
python/openprinttag-pn5180-rpi/src/openprinttag_rpi/models/: domain.py  event_dto.py  openprinttag_main.py
python/openprinttag-pn5180-rpi/src/openprinttag_rpi/mqtt/: tag_write_queue.py
python/openprinttag-pn5180-rpi/src/openprinttag_rpi/openprinttag/: parser.py  reader.py
python/openprinttag-pn5180-rpi/src/openprinttag_rpi/pn5180_rpi/: sensor.py
python/openprinttag-pn5180-rpi/src/openprinttag_rpi/repository/: filament_usage_message.py
python/openprinttag-pn5180-rpi/src/openprinttag_rpi/repository/sqlite/: filament_usage_message.py
python/openprinttag-pn5180-rpi/src/openprinttag_rpi/service/: filament_usage.py
python/openprinttag-pn5180-rpi/tests/openprinttag_rpi/openprinttag/: test_reader.py
python/openprinttag-pn5180-shared/: pyproject.toml
python/openprinttag-pn5180-shared/src/openprinttag_shared/: __init__.py  config.py
python/openprinttag-pn5180-shared/src/openprinttag_shared/common_mqtt/: __init__.py  config.py  models.py  publisher.py
python/openprinttag-pn5180-shared/src/openprinttag_shared/models/: dto.py  openprinttag_main.py
python/openprinttag-pn5180-shared/src/openprinttag_shared/ndef/: decoder.py  encoder.py
python/openprinttag-pn5180-shared/src/openprinttag_shared/openprinttag/: parser.py
python/openprinttag-pn5180-web-api/: pyproject.toml
python/openprinttag-pn5180-web-api/src/openprinttag_web_api/: database.py  main_web.py  models.py
python/openprinttag-pn5180-web-api/src/openprinttag_web_api/integrations/: __init__.py
python/openprinttag-pn5180-web-api/src/openprinttag_web_api/integrations/mqtt/: filament_usage_publisher.py
python/openprinttag-pn5180-web-api/src/openprinttag_web_api/integrations/printer/: bgcode.py  job_tracker.py
python/openprinttag-pn5180-web-api/src/openprinttag_web_api/integrations/printer/prusalink/: client.py
python/openprinttag-pn5180-web-api/src/openprinttag_web_api/models/: __init__.py  api.py  domain.py
python/openprinttag-pn5180-web-api/src/openprinttag_web_api/mqtt/: __init__.py  pn5180_events_subscriber.py  publisher.py
python/openprinttag-pn5180-web-api/src/openprinttag_web_api/repositories/: events.py  filament_usage.py  printers.py  tags.py
python/openprinttag-pn5180-web-api/src/openprinttag_web_api/repositories/sqlite/: events.py  filament_usage.py  printers.py  tags.py
python/openprinttag-pn5180-web-api/src/openprinttag_web_api/routes/: events.py  printers.py  tags.py
python/openprinttag-pn5180-web-api/src/openprinttag_web_api/services/: __init__.py  filament_tracking.py  printer_connection_service.py
python/openprinttag-pn5180-web-api/tests/openprinttag_web_api/integrations/printer/: test_job_tracker.py
scripts/: model_generator.py
src/: extended_sensor.py  main.py  openprinttag_parser.py  openprinttag_utils.py  pn5180_openprinttag.py
src/callbacks/: console.py  led_neopixel.py  mqtt_publisher.py
src/common/: api.py  enum.py
src/default/: callbacks.py  openprinttag_reader.py
src/models/: __init__.py  event_dto.py  fields.py  openprinttag_main.py  openprinttag_meta.py
src/mqtt/: __init__.py  subscriber.py  tag_write_queue.py
src/openprinttag/: parser.py  reader.py
src/openprinttag_vendored/: LICENSE  __init__.py
src/pn5180_rpi/: sensor.py
src/utils/: conversion.py
