[project]
name = "openprinttag-pn5180-rpi"
dynamic = ["version"]
description = "Small app that reads openprinttags using pn5180 on rpi."
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.11"
dependencies = [
    "cbor2>=5.4.0",
    "pyyaml>=6.0",
    "pn5180pi",
    "pydantic>=2.0.0",
    "rpi-ws281x>=5.0.0",
    "adafruit-circuitpython-neopixel>=6.3.21",
    "paho-mqtt>=2.1.0",
    "pigpio>=1.78",
]

[project.scripts]
openprinttag = "main:__main__"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "setuptools-scm>=9.2.2",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/_version.py"
fallback_version = "0.0.0"
