[project]
name = "openprinttag-workspace"
dynamic = ["version"]
description = "Workspace root for OpenPrintTag Python apps"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "openprinttag-pn5180-rpi",
    "openprinttag-pn5180-web-api",
    "openprinttag-pn5180-shared",
]

[tool.uv.sources]
openprinttag-pn5180-rpi = { workspace = true }
openprinttag-pn5180-web-api = { workspace = true }
openprinttag-pn5180-shared = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.8.0",
    "setuptools-scm>=9.2.2",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=7"]
build-backend = "setuptools.build_meta"
