[project]
name = "openprinttag-workspace"
dynamic = ["version"]
description = "Workspace root for OpenPrintTag Python apps"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "openprinttag-pn5180-*"
]

[tool.uv.sources]
openprinttag-pn5180-shared = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.8.0",
    "setuptools-scm>=9.2.2",
    "types-requests>=2.32.0",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
    "openprinttag-pn5180-rpi/tests",
    "openprinttag-pn5180-shared/tests",
    "openprinttag-pn5180-web-api/tests",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=7"]
build-backend = "setuptools.build_meta"
