[project]
name = "openprinttag-pn5180-rpi"
dynamic = ["version"]
description = "Small app that reads openprinttags using pn5180 on rpi."
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pn5180pi",
    "pydantic==2.12.5",
    "rpi-ws281x>=5.0.0",
    "adafruit-circuitpython-neopixel>=6.3.21",
    "paho-mqtt>=2.1.0",
    "pigpio>=1.78",
    "openprinttag-pn5180-shared",
]

[project.scripts]
openprinttag = "openprinttag_rpi.main_pn5180:__main__"

[dependency-groups]
dev = [
    "setuptools-scm>=9.2.2",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=7"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "pn5180.*"
ignore_missing_imports = true
follow_untyped_imports = true
